--- a/Privacy-Policy_InspoLense.html
+++ b/Privacy-Policy_InspoLense.html
@@ -30,7 +30,7 @@
     <p>You have rights to access, correct, or delete your personal data, subject to applicable laws.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about this policy, please contact us at: <a href="mailto:privacy@yourdomain.com">privacy@yourdomain.com</a>.</p>
+    <p>If you have any questions about this policy, please contact us at: <a href="mailto:inspolense@gmail.com">privacy@yourdomain.com</a>.</p>
 
     <p>Last updated: August 19, 2025</p>
 </body>
